Add cad project (#32)
* Adding top level intellij project so it is easier to load in

* Adding top level intellij config, for easier importing

Adding new

More updates

more

More updates

* Fixing checkstyle

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,24 @@ jobs:
       working-directory: 2020InfiniteRecharge
       run: ./gradlew build
 
+  build_offseason_robot:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Set up Java
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
+    
+    - name: Build Robot
+      working-directory: 2020InfiniteRecharge
+      run: ./gradlew build
+
   build_dashboard:
     strategy:
       matrix:
