--- a/custom_shuffleboard/.gitignore
+++ b/custom_shuffleboard/.gitignore
@@ -248,4 +248,9 @@ imgui.ini
 
 # End of https://www.gitignore.io/api/java,gradle,intellij+iml,visualstudiocode,linux,macos,windows,c++,visualstudiocode
 
-venv
+*.pyc
+
+# SnobotSim
+logs/
+simulator_config/joystick_config.properties
+simulator_config/networktables.ini*
