Fixing style errors (#6)
* Fixing style errors

* Fixing gradle permission

--- a/custom_shuffleboard/build.gradle
+++ b/custom_shuffleboard/build.gradle
@@ -75,7 +75,7 @@ dependencies {
 }
 
 
-//apply from: "../styleguide/styleguide.gradle"
+apply from: "../styleguide/styleguide.gradle"
 
 publishing {
     repositories {
