--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
-  build_robot:
+  build_gitflow:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
@@ -20,3 +20,46 @@ jobs:
     - name: Build Robot
       working-directory: gitflow
       run: ./gradlew build
+
+  build_basic_simulator:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
+      - name: Build Robot
+        working-directory: basic_simulator
+        run: ./gradlew build --continue -x pmdMain -x test
+
+
+  build_custom_shuffleboard:
+    strategy:
+      matrix:
+        platform: [windows-latest]
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
+      - name: Build Shuffleboard Widgets
+        working-directory: custom_shuffleboard
+        run: ./gradlew build publish
+
+      - name: Get Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: my-artifact_${{ matrix.platform }}
+          path: custom_shuffleboard/build/publishing
