--- a/basic_simulator/build.gradle
+++ b/basic_simulator/build.gradle
@@ -75,4 +75,4 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
-//apply from: "../styleguide/styleguide.gradle"
+apply from: "../styleguide/styleguide.gradle"
