--- a/gitflow/build.gradle
+++ b/gitflow/build.gradle
@@ -76,4 +76,4 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
-apply from: "styleguide.gradle"
+apply from: "../styleguide/styleguide.gradle"
