Adding styleguide, fixing complaints (#12)

--- a/OutreachBot/.vscode/settings.json
+++ b/OutreachBot/.vscode/settings.json
@@ -12,5 +12,7 @@
     "**/.settings": true,
     "**/.factorypath": true,
     "**/*~": true
-  }
+  },
+  "java.checkstyle.configuration": "${workspaceFolder}/../styleguide/checkstyle.xml",
+  "java.checkstyle.version": "8.18"
 }
