--- a/OutreachBot/build.gradle
+++ b/OutreachBot/build.gradle
@@ -74,3 +74,5 @@ jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
+
+apply from: "../styleguide/styleguide.gradle"
