Updating to 2021 libraries (#15)

--- a/basic_simulator/.vscode/settings.json
+++ b/basic_simulator/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
+  "java.server.launchMode": "Standard",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -10,7 +11,8 @@
     "**/.classpath": true,
     "**/.project": true,
     "**/.settings": true,
-    "**/.factorypath": true
+    "**/.factorypath": true,
+    "**/*~": true
   },
   "java.test.config": [
     {
