--- a/gitflow/build.gradle
+++ b/gitflow/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id "java"
-    id "eclipse"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
-    id "com.snobot.simulator.plugin.SnobotSimulatorPlugin" version "2020-0.0.0" apply false
+    id "edu.wpi.first.GradleRIO" version "2021.1.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -42,12 +40,6 @@ deploy {
 // Set this to true to enable desktop support.
 def includeDesktopSupport = false
 
-/////////////////////////////////////////////////////
-// Snobot Sim
-apply plugin: com.snobot.simulator.plugin.SnobotSimulatorPlugin
-apply from: "snobotsim/snobot_sim.gradle"
-// End Snobot Sim
-/////////////////////////////////////////////////////
 
 test {
     useJUnitPlatform()
@@ -66,6 +58,17 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
+
+    // Websocket extensions require additional configuration.
+    // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
+    // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
+}
+
+// Simulation configuration (e.g. environment variables).
+sim {
+    // Sets the websocket client remote host.
+    // envVar "HALSIMWS_HOST", "10.0.0.2"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
