Update robot to 2021 (#20)
* Ran importer to upgrade to 2021. No other changes

* Replacing deleted files

* Last couple integration updates

* Updating outreach bot version

* Putting more deleted code back in (but refactored)

--- a/2020InfiniteRecharge/.vscode/settings.json
+++ b/2020InfiniteRecharge/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
+  "java.server.launchMode": "Standard",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -10,8 +11,7 @@
     "**/.classpath": true,
     "**/.project": true,
     "**/.settings": true,
-    "**/.factorypath": true
-  },
-  "java.checkstyle.configuration": "${workspaceFolder}/styleguide/checkstyle.xml",
-  "java.checkstyle.version": "8.28"
+    "**/.factorypath": true,
+    "**/*~": true
+  }
 }
