--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build_outreach:
     strategy:
+      fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
@@ -20,3 +21,22 @@ jobs:
     - name: Build Robot
       working-directory: OutreachBot
       run: ./gradlew build
+
+  build_infinite_recharge_robot:
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
+      - name: Build Robot
+        working-directory: 2020InfiniteRecharge
+        run: ./gradlew build
