--- a/2020InfiniteRecharge/.gitignore
+++ b/2020InfiniteRecharge/.gitignore
@@ -156,6 +156,7 @@ gradle-app.setting
 .settings/
 bin/
 imgui.ini
+networktables.ini.bak
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
