--- a/2020InfiniteRecharge/.vscode/extensions.json
+++ b/2020InfiniteRecharge/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "shengchen.vscode-checkstyle",
-        "pjreiniger.snobotsimextension"
+        "vscjava.vscode-java-test"
     ]
   }
