--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
-  build_outreach:
+  build:
     strategy:
       fail-fast: false
       matrix:
@@ -18,25 +18,5 @@ jobs:
       with:
         java-version: 1.11
     
-    - name: Build Robot
-      working-directory: OutreachBot
+    - name: Build Everything
       run: ./gradlew build
-
-  build_infinite_recharge_robot:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Set up Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-
-      - name: Build Robot
-        working-directory: 2020InfiniteRecharge
-        run: ./gradlew build
