--- a/styleguide/styleguide.gradle
+++ b/styleguide/styleguide.gradle
@@ -6,22 +6,22 @@ apply plugin: 'pmd'
 jacoco {
     toolVersion = "0.8.6"
 }
-jacocoTestReport {
-    dependsOn test
-    reports {
-        xml.enabled true
-        html.enabled true
-    }
-}
-
-test {
-    finalizedBy jacocoTestReport
-}
+//jacocoTestReport {
+//    dependsOn test
+//    reports {
+//        xml.enabled true
+//        html.enabled true
+//    }
+//}
+//
+//test {
+//    finalizedBy jacocoTestReport
+//}
 
 
 checkstyle {
     toolVersion = "8.37"
-    configDir = file("${project.rootDir}/../styleguide")
+    configDir = file("${project.rootDir}/styleguide")
     config = resources.text.fromFile(new File(configDir, "checkstyle.xml"))
 }
 
@@ -29,6 +29,6 @@ pmd {
     toolVersion = '6.29.0'
     consoleOutput  = true
     reportsDir = file("${project.buildDir}/reports/pmd")
-    ruleSetFiles = files(file("$rootDir/../styleguide/pmd-ruleset.xml"))
+    ruleSetFiles = files(file("$rootDir/styleguide/pmd-ruleset.xml"))
     ruleSets = []
 }
