Moving shared libraries into their own modules (#34)

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,6 @@ pluginManagement {
 
 include '2020InfiniteRecharge'
 include 'OutreachBot'
+include 'libraries:GirlsOfSteelLib'
+include 'libraries:GirlsOfSteelLibRev'
+include 'libraries:GirlsOfSteelLibCtre'
