--- a/OutreachBot/build.gradle
+++ b/OutreachBot/build.gradle
@@ -40,6 +40,22 @@ deploy {
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+//////////////////////////////////////////
+// GOS Libraries
+def is_root_project = "${rootDir}" == "${projectDir}"
+if (is_root_project) {
+    sourceSets.main.java.srcDir "${projectDir}/../libraries/GirlsOfSteelLib/src/main/java/"
+    sourceSets.main.java.srcDir "${projectDir}/../libraries/GirlsOfSteelLibRev/src/main/java/"
+}
+else {
+    dependencies {
+        compile project(":libraries:GirlsOfSteelLib")
+        compile project(":libraries:GirlsOfSteelLibRev")
+    }
+}
+
+//////////////////////////////////////////
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
