--- a/libraries/GirlsOfSteelLibNavx/build.gradle
+++ b/libraries/GirlsOfSteelLibNavx/build.gradle
@@ -7,15 +7,15 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url "https://frcmaven.wpi.edu/artifactory/release/" }
-    maven { url 'http://www.revrobotics.com/content/sw/max/sdk/maven/' }
 }
 
 wpilibTools.deps.wpilibVersion = "2021.+"
 
 dependencies {
     compile wpilibTools.deps.wpilibJava("wpilibj")
-    compile "com.revrobotics.frc:SparkMax-java:1.5.4"
+    compile wpilibTools.deps.wpilibJava("ntcore")
     compile project(":libraries:GirlsOfSteelLib")
+    compile "com.kauailabs.navx.frc:navx-java:3.1.413"
 }
 
 test {
