--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include 'OutreachBot'
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
 include 'libraries:GirlsOfSteelLibCtre'
+include 'libraries:GirlsOfSteelLibNavx'
