--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,12 @@ include 'codelabs:basic_simulator'
 include 'codelabs:custom_shuffleboard'
 include 'codelabs:gitflow'
 include 'codelabs:pid'
+
+include 'y2021:2020InfiniteRecharge'
+include 'y2021:2020InfiniteRechargeDashboard'
+include 'y2021:OutreachBot'
+include 'y2021:OutreachBotDashboard'
+include 'libraries:GirlsOfSteelLib'
+include 'libraries:GirlsOfSteelLibRev'
+include 'libraries:GirlsOfSteelLibCtre'
+include 'libraries:GirlsOfSteelLibNavx'
