--- a/y2019/OffenseBot/build.gradle
+++ b/y2019/OffenseBot/build.gradle
@@ -62,3 +62,11 @@ jar {
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
+
+checkstyle {
+    ignoreFailures = true;
+}
+
+pmd {
+    ignoreFailures = true;
+}
