--- a/styleguide/styleguide.gradle
+++ b/styleguide/styleguide.gradle
@@ -32,3 +32,38 @@ pmd {
     ruleSetFiles = files(file("$rootDir/styleguide/pmd-ruleset.xml"))
     ruleSets = []
 }
+
+apply plugin: 'com.diffplug.spotless'
+
+spotless {
+    //    java {
+    //        target fileTree('.') {
+    //            include '**/*.java'
+    //            exclude '**/build/**', '**/build-*/**', 'bazel-*/**'
+    //        }
+    //        toggleOffOn()
+    //        indentWithSpaces(4)
+    //        removeUnusedImports()
+    //        trimTrailingWhitespace()
+    //        endWithNewline()
+    //    }
+    groovyGradle {
+        target fileTree('.') {
+            include '**/*.gradle'
+            exclude '**/build/**', '**/build-*/**', 'bazel-*/**'
+        }
+        greclipse()
+        indentWithSpaces(4)
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+    format 'misc', {
+        target fileTree('.') {
+            include '**/*.md', '**/.gitignore', "**/*.yml", "**/*.yaml"
+            exclude '**/build/**', '**/build-*/**', 'bazel-*/**'
+        }
+        trimTrailingWhitespace()
+        indentWithSpaces(4)
+        endWithNewline()
+    }
+}
