--- a/codelabs/pid/build.gradle
+++ b/codelabs/pid/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     // Websocket extensions require additional configuration.
     // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
     // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
+
+    compile project(":libraries:GirlsOfSteelLib")
+    compile project(":libraries:GirlsOfSteelLibRev")
 }
 
 // Simulation configuration (e.g. environment variables).
