--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,5 @@ plugins {
 allprojects {
     apply from: "${rootDir}/styleguide/styleguide.gradle"
 }
+
+apply from: "3rdParty_sb_widget_helper.gradle"
