--- a/libraries/GirlsOfSteelLibCtre/build.gradle
+++ b/libraries/GirlsOfSteelLibCtre/build.gradle
@@ -1,21 +1,11 @@
 plugins {
-    id 'java'
-    id 'edu.wpi.first.WpilibTools' version '0.7.1'
+    id "java"
+    id "edu.wpi.first.GradleRIO" version "2021.3.1"
 }
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url "https://frcmaven.wpi.edu/artifactory/release/" }
-    maven { url 'https://devsite.ctr-electronics.com/maven/release/' }
-}
-
-wpilibTools.deps.wpilibVersion = "2021.+"
 
 dependencies {
-    compile wpilibTools.deps.wpilibJava("wpilibj")
-    compile "com.ctre.phoenix:api-java:5.19.4"
-    compile "com.ctre.phoenix:wpiapi-java:5.19.4"
+    implementation wpi.deps.wpilib()
+    implementation wpi.deps.vendor.java()
     compile project(":libraries:GirlsOfSteelLib")
 }
 
