--- a/libraries/GirlsOfSteelLibNavx/build.gradle
+++ b/libraries/GirlsOfSteelLibNavx/build.gradle
@@ -1,21 +1,12 @@
 plugins {
-    id 'java'
-    id 'edu.wpi.first.WpilibTools' version '0.7.1'
+    id "java"
+    id "edu.wpi.first.GradleRIO" version "2021.3.1"
 }
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url "https://frcmaven.wpi.edu/artifactory/release/" }
-}
-
-wpilibTools.deps.wpilibVersion = "2021.+"
 
 dependencies {
-    compile wpilibTools.deps.wpilibJava("wpilibj")
-    compile wpilibTools.deps.wpilibJava("ntcore")
+    implementation wpi.deps.wpilib()
+    implementation wpi.deps.vendor.java()
     compile project(":libraries:GirlsOfSteelLib")
-    compile "com.kauailabs.navx.frc:navx-java:3.1.413"
 }
 
 test {
