--- a/libraries/GirlsOfSteelLibRev/build.gradle
+++ b/libraries/GirlsOfSteelLibRev/build.gradle
@@ -1,20 +1,11 @@
 plugins {
-    id 'java'
-    id 'edu.wpi.first.WpilibTools' version '0.7.1'
+    id "java"
+    id "edu.wpi.first.GradleRIO" version "2021.3.1"
 }
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url "https://frcmaven.wpi.edu/artifactory/release/" }
-    maven { url 'http://www.revrobotics.com/content/sw/max/sdk/maven/' }
-}
-
-wpilibTools.deps.wpilibVersion = "2021.+"
 
 dependencies {
-    compile wpilibTools.deps.wpilibJava("wpilibj")
-    compile "com.revrobotics.frc:SparkMax-java:1.5.4"
+    implementation wpi.deps.wpilib()
+    implementation wpi.deps.vendor.java()
     compile project(":libraries:GirlsOfSteelLib")
 }
 
