--- a/y2022/CallistoRewrite/build.gradle
+++ b/y2022/CallistoRewrite/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
     simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
 
+    compile project(":libraries:GirlsOfSteelLib")
+    compile project(":libraries:GirlsOfSteelLibRev")
+
     // Websocket extensions require additional configuration.
     // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
     // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
