--- a/codelabs/basic_java/BUILD.bazel
+++ b/codelabs/basic_java/BUILD.bazel
@@ -1,9 +1,9 @@
-load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot", "gos_junit4_test")
+load("//build_scripts/bazel:java_rules.bzl", "gos_java_binary", "gos_junit4_test")
 
-gos_java_robot(
+gos_java_binary(
     name = "basic_java",
     srcs = glob(["src/main/java/**/*.java"]),
-    main_class = "com.gos.codelabs.first_code_lab.Main",
+    main_class = "com.gos.codelabs.basic_java.RunCalculator",
 )
 
 gos_junit4_test(
