--- a/y2022/ChassisProject/BUILD.bazel
+++ b/y2022/ChassisProject/BUILD.bazel
@@ -3,8 +3,9 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
 gos_java_robot(
     name = "CallistoRewrite",
     srcs = glob(["src/main/java/**/*.java"]),
+    disable_checkstyle = True,
     disable_pmd = True,
-    main_class = "com.gos.calisto.v2.Main",
+    main_class = "frc.robot.Main",
     deps = [
         "@bazelrio//libraries/java/wpilib/hal",
         "@bazelrio//libraries/java/wpilib/new_commands",
