--- a/old_robots/y2017/Secondary_Human_Training_Golem/build.gradle
+++ b/old_robots/y2017/Secondary_Human_Training_Golem/build.gradle
@@ -92,6 +92,6 @@ jar {
 tasks.withType(Checkstyle) {
     enabled = false
 }
-tasks.withType(Pmd) {
-    enabled = false
-}
+//tasks.withType(Pmd) {
+//    enabled = false
+//}
