Updated project file for ChassisProject and completed successful build.

--- a/settings.gradle
+++ b/settings.gradle
@@ -50,3 +50,4 @@ include 'y2021:OutreachBot'
 include 'y2021:OutreachBotDashboard'
 
 include 'y2022:CallistoRewrite'
+include 'y2022:ChassisProject'
