Fix bazel builds

--- a/old_robots/y2016/TeamSquirtle/BUILD.bazel
+++ b/old_robots/y2016/TeamSquirtle/BUILD.bazel
@@ -8,6 +8,9 @@ gos_java_robot(
     deps = [
         "//old_robots/LegacyLibraries",
         "@bazelrio//libraries/java/ctre/phoenix",
+        "@bazelrio//libraries/java/opencv",
+        "@bazelrio//libraries/java/wpilib/cameraserver",
+        "@bazelrio//libraries/java/wpilib/cscore",
         "@bazelrio//libraries/java/wpilib/old_commands",
         "@bazelrio//libraries/java/wpilib/wpilibj",
     ],
