--- a/styleguide/styleguide.gradle
+++ b/styleguide/styleguide.gradle
@@ -21,8 +21,7 @@ jacoco {
 
 checkstyle {
     toolVersion = "9.0"
-    configDir = file("${project.rootDir}/styleguide")
-    config = resources.text.fromFile(new File(configDir, "checkstyle.xml"))
+    configDirectory.set(file("${project.rootDir}/styleguide"))
 }
 
 pmd {
