--- a/codelabs/pid/BUILD.bazel
+++ b/codelabs/pid/BUILD.bazel
@@ -12,6 +12,7 @@ gos_java_robot(
         "@bazelrio//libraries/java/wpilib/ntcore",
         "@bazelrio//libraries/java/wpilib/wpilibj",
         "@bazelrio//libraries/java/wpilib/wpimath",
+        "@bazelrio//libraries/java/wpilib/wpiutil",
         "@snobot_sim//jar",
     ],
 )
