--- a/codelabs/pid/build.gradle
+++ b/codelabs/pid/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
     // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
 
-    compile project(":libraries:GirlsOfSteelLib")
-    compile project(":libraries:GirlsOfSteelLibRev")
+    implementation project(":libraries:GirlsOfSteelLib")
+    implementation project(":libraries:GirlsOfSteelLibRev")
 }
 
 // Simulation configuration (e.g. environment variables).
