--- a/libraries/GirlsOfSteelLib/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/BUILD.bazel
@@ -6,5 +6,6 @@ gos_java_library(
     visibility = ["//visibility:public"],
     deps = [
         "@bazelrio//libraries/java/wpilib/wpilibj",
+        "@bazelrio//libraries/java/wpilib/wpimath",
     ],
 )
