--- a/y2020/2020InfiniteRecharge/BUILD.bazel
+++ b/y2020/2020InfiniteRecharge/BUILD.bazel
@@ -19,6 +19,7 @@ gos_java_robot(
         "@bazelrio//libraries/java/wpilib/ntcore",
         "@bazelrio//libraries/java/wpilib/wpilibj",
         "@bazelrio//libraries/java/wpilib/wpimath",
+        "@bazelrio//libraries/java/wpilib/wpiutil",
         "@snobot_sim//jar",
     ],
 )
