--- a/y2020/2020InfiniteRecharge/build.gradle
+++ b/y2020/2020InfiniteRecharge/build.gradle
@@ -63,10 +63,10 @@ dependencies {
     // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
     // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
 
-    compile project(":libraries:GirlsOfSteelLib")
-    compile project(":libraries:GirlsOfSteelLibCtre")
-    compile project(":libraries:GirlsOfSteelLibNavx")
-    compile project(":libraries:GirlsOfSteelLibRev")
+    implementation project(":libraries:GirlsOfSteelLib")
+    implementation project(":libraries:GirlsOfSteelLibCtre")
+    implementation project(":libraries:GirlsOfSteelLibNavx")
+    implementation project(":libraries:GirlsOfSteelLibRev")
 }
 
 // Simulation configuration (e.g. environment variables).
