--- a/old_robots/y2016/TeamFBI_EOPP/build.gradle
+++ b/old_robots/y2016/TeamFBI_EOPP/build.gradle
@@ -6,7 +6,7 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-def ROBOT_MAIN_CLASS = "org.usfirst.frc.team3504.robot.Main"
+def ROBOT_MAIN_CLASS = "com.gos.preseason2016.team_fbi.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
