--- a/old_robots/y2011/GOS2011/Drive/BUILD.bazel
+++ b/old_robots/y2011/GOS2011/Drive/BUILD.bazel
@@ -2,7 +2,7 @@
 #
 #gos_java_robot(
 #    name = "GOS2011",
-#    srcs = glob(["src/**/*.java"]),
+#    srcs = glob(["src/main/java/**/*.java"]),
 #    disable_pmd = True,
 #    main_class = "com.gos.codelabs.first_code_lab.Main",
 #    deps = [
