--- a/old_robots/y2014/GOS2014/BUILD.bazel
+++ b/old_robots/y2014/GOS2014/BUILD.bazel
@@ -2,9 +2,9 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
 
 gos_java_robot(
     name = "GOS2014",
-    srcs = glob(["src/**/*.java"]),
+    srcs = glob(["src/main/java/**/*.java"]),
     disable_checkstyle = True,
-    main_class = "com.gos.aerial_assist.girlsofsteel.Main",
+    main_class = "com.gos.aerial_assist.Main",
     deps = [
         "@bazelrio//libraries/java/ctre/phoenix",
         "@bazelrio//libraries/java/wpilib/ntcore",
