--- a/y2018/2018Beta/BUILD.bazel
+++ b/y2018/2018Beta/BUILD.bazel
@@ -2,7 +2,7 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
 
 gos_java_robot(
     name = "2018Beta",
-    srcs = glob(["src/**/*.java"]),
+    srcs = glob(["src/main/java/**/*.java"]),
     main_class = "com.gos.steam_works.Main",
     deps = [
         "//libraries/GirlsOfSteelLib",
