Created a shooter subsystem and motor speed command.

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,6 +1,7 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
 double "/Preferences/Gravity Offset"=2.6
+double "/Preferences/Motor Speed"=0.5
 double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
 double "/Preferences/Pivot PID.mm.max_acceleration"=0
