start go to cargo command (#83)
* start go to cargo command

* finished go to cargo command

* merged with the new main

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -5,3 +5,5 @@ double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
 double "/Preferences/Pivot PID.mm.max_acceleration"=0
 double "/Preferences/Pivot PID.mm.max_velocity"=0
+double "/Preferences/To XY Distance PID"=0.32
+double "/Preferences/To XY Turn PID"=0.785
